@@ -5,6 +5,11 @@ software-center (2.0.1) UNRELEASED; urgency=low
     of the parent PathBar. This prevents the navigation bar from
     "disappearing" (its height was somehow set to 1) (LP: #564042)
 
+  [ Michael Vogt ]
+  * cherry r730 lp:~mmcg069/software-center/minor-change/changes:
+    - fix CellRendererAppView text rendering when using hicolor gtk theme
+    (LP: #564694)
+
  -- Michael Vogt <egon@top.ping.de>  Fri, 16 Apr 2010 19:40:19 +0200
 
 software-center (2.0) lucid; urgency=low
